       handler/action  or some other internal apache redirection/rewrite.
       Primarily  of  use  when  invoking  cgi's  for  virtual  hosts via
       Action/SetHandler.
     * Modified  san's REDIRECT_URL support to be --with-use-redirect-url
       instead of --with-check-redirect-url, since it's more a functional
       change, not a security check.

  New in version 3.7.1:

     * Added  --with-minimum-gid  option  to  check  minimum user GID and
       auxilliary  groups.  This  is in response to complaints on BugTraq
       about suexec not checking auxgroups.

  New in version 3.7:

     * Encode  user  supplied  output in error messages to fix cross-site
       scripting vulnerability reported by Hiromitsu Takagi.
     * Minor warning cleanup
     * Slight improvement to a couple diagnostic messages.

  New in version 3.6.5:

     * Fixed small problem with glibc2.1 and errno.h vs. sys/errno.h
     * Added simple chroot support for expert installations.
     * Applied  fix  for path translated, removed option for not enabling
       correct path_translated value.
     * Added multiuser cgi script directory support.
     * Added  patch  from  Scott  Sutherland  for  fixing parsing of auth
       files.
     * Added patch from Christian Kruse for better symlink handling.

  New in version 3.6.4:

     * Changed license to GPL finally.
     * Fixed netmask comparison
     * Added anonymous CVS server info
     * Updates  from  David  Hollenberg for misc. error checking/handling
       and overflow protection.
     * Added  check  for making sure cgiwrap is setuid and printing out a
       usable error message if not.
     * Now  prints  out  path  to access control files if one or both are
       missing.
     * Slight changes to aux groups code just in case setgroups() doesn't
       support a empty list.
     * Added some extra info to server userid error message.
     * Added some info to the FAQ.

  New in version 3.6.3:
