@@ -27,6 +27,13 @@
      * Modified  san's REDIRECT_URL support to be --with-use-redirect-url
        instead of --with-check-redirect-url, since it's more a functional
        change, not a security check.
+     * Added   a   --with-quiet-errors   option  to  allow  significantly
+       restricting  the  amount  of  internal  information  that an error
+       message displays.
+     * Added  ability  to  override  the  vhost that cgiwrap users via an
+       optional  CGIWRAP_AUTH_VHOST env var, which if present and feature
+       enabled,  will  be  used  instead of HTTP_HOST. This is useful for
+       when you have wildcard servernames in apache.
 
   New in version 3.7.1:
 
